Added tests for DataPresentators, Converter